package dio._1coding_future_POO._3_Abstracao;

public abstract class ServicoMensagemInstantanea {
    public abstract void enviarMensagem();
    public abstract void receberMensagem();


}
